<resources>
    <string name="app_name">Maintenance App</string>
    <string name="app_version">Version 0.1</string>
    <!-- actions strings -->
    <string name="action_settings">Settings</string>
    <!-- user fragments strings -->
    <string name="engineer_name">Engineer Name</string>
    <!-- drawer menu strings -->
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="workOrders">Work Orders</string>
    <string name="pmCheckLists">PM Check Lists</string>
    <string name="inventoryItems">Inventory Items</string>
    <string name="users">Users</string>
    <string name="settings">Settings</string>
    <string name="enter_engineers_name">Enter engineers name</string>
    <string name="addUser">Add User</string>
    <!-- inventory add fragment strings -->
    <string name="action_updatePart">update</string>
    <string name="part_number">Supplier part number</string>
    <string name="description">Description of the part</string>
    <string name="stocklocation">Stock location</string>
    <string name="qtyhand">Qty on hand</string>
    <string name="ManfName">Manifactor name</string>
    <string name="manfPartNumber">Manufactor part number</string>
    <string name="enter_manf_name_of_the_part">Enter manufacturer Name of the part</string>
    <string name="enter_manf_part_nuumber">Enter manufacturer part number</string>
    <string name="enter_qty_on_hand">Enter Qty on hand</string>
    <string name="enter_type_of_the_part">Enter type of the part</string>
    <string name="enter_stock_location">Enter stock location</string>
    <string name="enter_description_of_the_part">Enter description of the part</string>
    <string name="enter_part_number">Enter suppliers part number</string>
    <string name="supplier_name">Supplier name</string>
    <string name="enter_supplier_name">Enter supplier name</string>
    <string name="enter_the_machine_the_part_fits">Enter the machine the part fits</string>
    <string name="part_fits_on_machine">Part fits on machine</string>
    <string name="picture_of_part">Picture of part</string>
    <string name="enter_picture_of_part">Enter picture of part</string>
    <string name="Type">Type</string>
    <!-- about fragment strings -->
    <string name="app_logo">App Logo</string>
    <string name="programmed_by">Programmed By T.Shemwell</string>
    <string name="about">About</string>
    <string name="part_name">Part name</string>
    <string name="enter_part_name">Enter Part Name</string>
    <string name="price">Price</string>
    <string name="enter_price_for_the_part">Enter Price for the part</string>
</resources>